moved all the files into the respective folders

--- a/html/coreResumeBuilder.html
+++ b/html/coreResumeBuilder.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume Builder</title>
-    <link rel="stylesheet" href="./crbstyle.css" />
-    <link rel="stylesheet" href="./previewcss.css" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./rtstyle.css" />
+    <link rel="stylesheet" href="../styles/crbstyle.css" />
+    <link rel="stylesheet" href="../styles/previewcss.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/rtstyle.css" />
     <style>
       /* Base Styles */
 
@@ -864,7 +864,7 @@
           </div>
         </div>
         <div class="crb-preview">
-          <img src="./res1.jpeg" alt="Resume Preview" />
+          <img src="../images/res1.jpeg" alt="Resume Preview" />
           <div class="preview-btn">
             <button type="button" id="openPreview">View Resume</button>
           </div>
@@ -965,6 +965,6 @@
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
