--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
   </head>
   <body>
     <header>
@@ -41,7 +41,7 @@
     </header>
     <main>
       <div class="animation">
-        <img src="./res.webp" alt="resume" />
+        <img src="../images/res.webp" alt="resume" />
       </div>
       <div class="main-container">
         <div class="main-content">
@@ -80,8 +80,8 @@
         <div class="logo-list-wrapper">
           <div class="brand-title">Subscribers have been hired by: *</div>
           <div class="logo-list">
-            <img src="./black-logo-1.svg" alt="" />
-            <img src="./black-logo-1.svg" alt="" />
+            <img src="../images/black-logo-1.svg" alt="" />
+            <img src="../images/black-logo-1.svg" alt="" />
           </div>
         </div>
       </div>
