--- a/html/resumeTemplate.html
+++ b/html/resumeTemplate.html
@@ -11,13 +11,13 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./rtstyle.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/rtstyle.css" />
   </head>
   <body>
     <header>
       <div class="logo flex">
-        <a href="./index.html"><span>Srikanth</span></a>
+        <a href="../html/index.html"><span>Srikanth</span></a>
       </div>
       <div class="menu-toggle">&#9776;</div>
       <div class="main-menu">
@@ -32,7 +32,9 @@
           </div>
           <div class="nav-btn">
             <div class="btn-cover">
-              <a href="./coreResumeBuilder.html"><span>Build Resume</span></a>
+              <a href="../html/coreResumeBuilder.html"
+                ><span>Build Resume</span></a
+              >
             </div>
           </div>
         </div>
@@ -44,34 +46,34 @@
       </h1>
       <div class="resume-gallery">
         <div class="resume-col">
-          <img src="./res1.jpeg" alt="resume templaate" />
+          <img src="../images/res1.jpeg" alt="resume templaate" />
         </div>
         <div class="resume-col">
-          <img src="./res2.jpeg" alt="resume templaate" />
+          <img src="../images/res2.jpeg" alt="resume templaate" />
         </div>
         <div class="resume-col">
-          <img src="./res3.jpeg" alt="resume templaate" />
+          <img src="../images/res3.jpeg" alt="resume templaate" />
         </div>
         <div class="resume-col">
-          <img src="./res4.jpeg" alt="resume templaate" />
+          <img src="../images/res4.jpeg" alt="resume templaate" />
         </div>
         <div class="resume-col">
-          <img src="./res5.jpeg" alt="resume templaate" />
+          <img src="../images/res5.jpeg" alt="resume templaate" />
         </div>
         <div class="resume-col">
-          <img src="./res6.jpeg" alt="resume templaate" />
+          <img src="../images/res6.jpeg" alt="resume templaate" />
         </div>
         <div class="resume-col">
-          <img src="./res7.jpeg" alt="resume templaate" />
+          <img src="../images/res7.jpeg" alt="resume templaate" />
         </div>
         <div class="resume-col">
-          <img src="./res1.jpeg" alt="resume templaate" />
+          <img src="../images/res1.jpeg" alt="resume templaate" />
         </div>
         <div class="resume-col">
-          <img src="./res2.jpeg" alt="resume templaate" />
+          <img src="../images/res2.jpeg" alt="resume templaate" />
         </div>
         <div class="resume-col">
-          <img src="./res3.jpeg" alt="resume templaate" />
+          <img src="../images/res3.jpeg" alt="resume templaate" />
         </div>
       </div>
     </div>
