moved the index file to the / folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header>
@@ -27,13 +27,17 @@
             <ul>
               <a href="#"><li>Resume Builder App</li></a>
               <a href="#"><li>Resume Examples</li></a>
-              <a href="./resumeTemplate.html"><li>Resume Templates</li></a>
+              <a href="./html/resumeUserTemplate.html"
+                ><li>Resume Templates</li></a
+              >
               <a href="#"><li>Cover Letter Builder</li></a>
             </ul>
           </div>
           <div class="nav-btn">
             <div class="btn-cover">
-              <a href="./coreResumeBuilder.html"><span>Build Resume</span></a>
+              <a href="./html/coreResumeBuilder.html"
+                ><span>Build Resume</span></a
+              >
             </div>
           </div>
         </div>
@@ -41,7 +45,7 @@
     </header>
     <main>
       <div class="animation">
-        <img src="../images/res.webp" alt="resume" />
+        <img src="./images/res.webp" alt="resume" />
       </div>
       <div class="main-container">
         <div class="main-content">
@@ -54,7 +58,7 @@
           </div>
           <div class="main-content-btn">
             <div class="mcb1">
-              <a href="./coreResumeBuilder.html"
+              <a href="./html/coreResumeBuilder.html"
                 ><span>Create my Resume Now</span></a
               >
             </div>
@@ -80,8 +84,8 @@
         <div class="logo-list-wrapper">
           <div class="brand-title">Subscribers have been hired by: *</div>
           <div class="logo-list">
-            <img src="../images/black-logo-1.svg" alt="" />
-            <img src="../images/black-logo-1.svg" alt="" />
+            <img src="./images/black-logo-1.svg" alt="" />
+            <img src="./images/black-logo-1.svg" alt="" />
           </div>
         </div>
       </div>
