change the hyper link in all the html files, so that when we click on the logo, it redirects to the home page

--- a/html/resumeTemplate.html
+++ b/html/resumeTemplate.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <div class="logo flex">
-        <a href="../html/index.html"><span>Srikanth</span></a>
+        <a href="../index.html"><span>Srikanth</span></a>
       </div>
       <div class="menu-toggle">&#9776;</div>
       <div class="main-menu">
