--- a/html/coreResumeBuilder.html
+++ b/html/coreResumeBuilder.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <div class="logo flex">
-        <a href="./index.html"><span>Srikanth</span></a>
+        <a href="../index.html"><span>Srikanth</span></a>
       </div>
       <div class="menu-toggle">&#9776;</div>
       <div class="main-menu">
