changed the href

--- a/html/resumeTemplate.html
+++ b/html/resumeTemplate.html
@@ -32,9 +32,7 @@
           </div>
           <div class="nav-btn">
             <div class="btn-cover">
-              <a href="../html/coreResumeBuilder.html"
-                ><span>Build Resume</span></a
-              >
+              <a href="./coreResumeBuilder.html"><span>Build Resume</span></a>
             </div>
           </div>
         </div>
