added resume template examples

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <div class="menu">
             <ul>
               <a href="#"><li>Resume Builder App</li></a>
-              <a href="#"><li>Resume Examples</li></a>
               <a href="./html/resumeUserTemplate.html"
-                ><li>Resume Templates</li></a
+                ><li>Resume Examples</li></a
               >
+              <a href="./html/resumeTemplate.html"><li>Resume Templates</li></a>
               <a href="#"><li>Cover Letter Builder</li></a>
             </ul>
           </div>
